// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the LikeButton component should render a Like 1`] = `
<View
  cache={
    InMemoryCache {
      "addTypename": true,
      "config": Object {
        "addTypename": true,
        "dataIdFromObject": [Function],
        "possibleTypes": Object {
          "AudioNode": Array [
            "UniversalContentItem",
            "DevotionalContentItem",
            "MediaContentItem",
            "ContentSeriesContentItem",
            "WeekendContentItem",
          ],
          "Card": Array [
            "UniversalContentItem",
            "DevotionalContentItem",
            "MediaContentItem",
            "ContentSeriesContentItem",
            "WeekendContentItem",
          ],
          "ContentChildNode": Array [
            "UniversalContentItem",
            "DevotionalContentItem",
            "MediaContentItem",
            "ContentSeriesContentItem",
            "WeekendContentItem",
          ],
          "ContentItem": Array [
            "UniversalContentItem",
            "DevotionalContentItem",
            "MediaContentItem",
            "ContentSeriesContentItem",
            "WeekendContentItem",
          ],
          "ContentNode": Array [
            "UniversalContentItem",
            "DevotionalContentItem",
            "MediaContentItem",
            "ContentSeriesContentItem",
            "WeekendContentItem",
          ],
          "ContentParentNode": Array [
            "UniversalContentItem",
            "DevotionalContentItem",
            "MediaContentItem",
            "ContentSeriesContentItem",
            "WeekendContentItem",
          ],
          "Feature": Array [
            "ActionListFeature",
            "HeroListFeature",
            "VerticalCardListFeature",
            "HorizontalCardListFeature",
            "TextFeature",
            "ScriptureFeature",
            "WebviewFeature",
            "PrayerListFeature",
          ],
          "FeaturesNode": Array [
            "ContentSeriesContentItem",
            "WeekendContentItem",
          ],
          "LikableNode": Array [
            "UniversalContentItem",
            "DevotionalContentItem",
            "MediaContentItem",
            "ContentSeriesContentItem",
            "WeekendContentItem",
          ],
          "LiveNode": Array [
            "WeekendContentItem",
          ],
          "Media": Array [
            "ImageMedia",
            "VideoMedia",
            "AudioMedia",
          ],
          "MediaSource": Array [
            "ImageMediaSource",
            "VideoMediaSource",
            "AudioMediaSource",
          ],
          "Node": Array [
            "ContentChannel",
            "Person",
            "Device",
            "Campus",
            "Event",
            "Group",
            "Scripture",
            "Pass",
            "PrayerRequest",
            "UniversalContentItem",
            "DevotionalContentItem",
            "MediaContentItem",
            "ContentSeriesContentItem",
            "WeekendContentItem",
            "Url",
            "ActionListFeature",
            "HeroListFeature",
            "VerticalCardListFeature",
            "HorizontalCardListFeature",
            "TextFeature",
            "ScriptureFeature",
            "WebviewFeature",
            "PrayerListFeature",
          ],
          "ProgressNode": Array [
            "ContentSeriesContentItem",
          ],
          "ScriptureNode": Array [
            "DevotionalContentItem",
            "MediaContentItem",
          ],
          "Sharable": Array [
            "SharableContentItem",
            "SharableFeature",
          ],
          "ShareableNode": Array [
            "UniversalContentItem",
            "DevotionalContentItem",
            "MediaContentItem",
            "ContentSeriesContentItem",
            "WeekendContentItem",
          ],
          "ThemedNode": Array [
            "UniversalContentItem",
            "DevotionalContentItem",
            "MediaContentItem",
            "ContentSeriesContentItem",
            "WeekendContentItem",
          ],
          "VideoNode": Array [
            "UniversalContentItem",
            "DevotionalContentItem",
            "MediaContentItem",
            "ContentSeriesContentItem",
            "WeekendContentItem",
          ],
        },
        "resultCaching": true,
        "typePolicies": Object {},
      },
      "data": Root {
        "canRead": [Function],
        "data": Object {},
        "getFieldValue": [Function],
        "group": CacheGroup {
          "caching": true,
          "d": [Function],
          "keyMaker": KeyTrie {
            "makeData": [Function],
            "weakness": true,
          },
        },
        "policies": Policies {
          "cache": [Circular],
          "config": Object {
            "cache": [Circular],
            "dataIdFromObject": [Function],
            "possibleTypes": Object {
              "AudioNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "Card": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "ContentChildNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "ContentItem": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "ContentNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "ContentParentNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "Feature": Array [
                "ActionListFeature",
                "HeroListFeature",
                "VerticalCardListFeature",
                "HorizontalCardListFeature",
                "TextFeature",
                "ScriptureFeature",
                "WebviewFeature",
                "PrayerListFeature",
              ],
              "FeaturesNode": Array [
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "LikableNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "LiveNode": Array [
                "WeekendContentItem",
              ],
              "Media": Array [
                "ImageMedia",
                "VideoMedia",
                "AudioMedia",
              ],
              "MediaSource": Array [
                "ImageMediaSource",
                "VideoMediaSource",
                "AudioMediaSource",
              ],
              "Node": Array [
                "ContentChannel",
                "Person",
                "Device",
                "Campus",
                "Event",
                "Group",
                "Scripture",
                "Pass",
                "PrayerRequest",
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
                "Url",
                "ActionListFeature",
                "HeroListFeature",
                "VerticalCardListFeature",
                "HorizontalCardListFeature",
                "TextFeature",
                "ScriptureFeature",
                "WebviewFeature",
                "PrayerListFeature",
              ],
              "ProgressNode": Array [
                "ContentSeriesContentItem",
              ],
              "ScriptureNode": Array [
                "DevotionalContentItem",
                "MediaContentItem",
              ],
              "Sharable": Array [
                "SharableContentItem",
                "SharableFeature",
              ],
              "ShareableNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "ThemedNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "VideoNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
            },
            "typePolicies": Object {},
          },
          "fuzzySubtypes": Map {},
          "rootIdsByTypename": Object {
            "Mutation": "ROOT_MUTATION",
            "Query": "ROOT_QUERY",
            "Subscription": "ROOT_SUBSCRIPTION",
          },
          "rootTypenamesById": Object {
            "ROOT_MUTATION": "Mutation",
            "ROOT_QUERY": "Query",
            "ROOT_SUBSCRIPTION": "Subscription",
          },
          "supertypeMap": Map {
            "Node" => Set {},
            "ContentChannel" => Set {
              "Node",
            },
            "Person" => Set {
              "Node",
            },
            "Device" => Set {
              "Node",
            },
            "Campus" => Set {
              "Node",
            },
            "Event" => Set {
              "Node",
            },
            "Group" => Set {
              "Node",
            },
            "Scripture" => Set {
              "Node",
            },
            "Pass" => Set {
              "Node",
            },
            "PrayerRequest" => Set {
              "Node",
            },
            "UniversalContentItem" => Set {
              "Node",
              "ContentItem",
              "ContentNode",
              "Card",
              "VideoNode",
              "AudioNode",
              "ContentParentNode",
              "ContentChildNode",
              "ThemedNode",
              "LikableNode",
              "ShareableNode",
            },
            "DevotionalContentItem" => Set {
              "Node",
              "ContentItem",
              "ContentNode",
              "Card",
              "VideoNode",
              "AudioNode",
              "ContentParentNode",
              "ContentChildNode",
              "ThemedNode",
              "ScriptureNode",
              "LikableNode",
              "ShareableNode",
            },
            "MediaContentItem" => Set {
              "Node",
              "ContentItem",
              "ContentNode",
              "Card",
              "VideoNode",
              "AudioNode",
              "ContentParentNode",
              "ContentChildNode",
              "ThemedNode",
              "ScriptureNode",
              "LikableNode",
              "ShareableNode",
            },
            "ContentSeriesContentItem" => Set {
              "Node",
              "ContentItem",
              "ContentNode",
              "Card",
              "VideoNode",
              "AudioNode",
              "FeaturesNode",
              "ContentParentNode",
              "ContentChildNode",
              "ThemedNode",
              "ProgressNode",
              "LikableNode",
              "ShareableNode",
            },
            "WeekendContentItem" => Set {
              "Node",
              "ContentItem",
              "ContentNode",
              "Card",
              "VideoNode",
              "AudioNode",
              "FeaturesNode",
              "ContentParentNode",
              "ContentChildNode",
              "ThemedNode",
              "LikableNode",
              "ShareableNode",
              "LiveNode",
            },
            "Url" => Set {
              "Node",
            },
            "ActionListFeature" => Set {
              "Node",
              "Feature",
            },
            "HeroListFeature" => Set {
              "Node",
              "Feature",
            },
            "VerticalCardListFeature" => Set {
              "Node",
              "Feature",
            },
            "HorizontalCardListFeature" => Set {
              "Node",
              "Feature",
            },
            "TextFeature" => Set {
              "Node",
              "Feature",
            },
            "ScriptureFeature" => Set {
              "Node",
              "Feature",
            },
            "WebviewFeature" => Set {
              "Node",
              "Feature",
            },
            "PrayerListFeature" => Set {
              "Node",
              "Feature",
            },
            "ContentItem" => Set {},
            "Media" => Set {},
            "ImageMedia" => Set {
              "Media",
            },
            "VideoMedia" => Set {
              "Media",
            },
            "AudioMedia" => Set {
              "Media",
            },
            "MediaSource" => Set {},
            "ImageMediaSource" => Set {
              "MediaSource",
            },
            "VideoMediaSource" => Set {
              "MediaSource",
            },
            "AudioMediaSource" => Set {
              "MediaSource",
            },
            "Sharable" => Set {},
            "SharableContentItem" => Set {
              "Sharable",
            },
            "SharableFeature" => Set {
              "Sharable",
            },
            "Feature" => Set {},
            "ContentNode" => Set {},
            "Card" => Set {},
            "VideoNode" => Set {},
            "AudioNode" => Set {},
            "FeaturesNode" => Set {},
            "ContentParentNode" => Set {},
            "ContentChildNode" => Set {},
            "ThemedNode" => Set {},
            "ProgressNode" => Set {},
            "ScriptureNode" => Set {},
            "LikableNode" => Set {},
            "ShareableNode" => Set {},
            "LiveNode" => Set {},
          },
          "typePolicies": Object {},
          "usingPossibleTypes": true,
        },
        "refs": Object {},
        "rootIds": Object {},
        "sharedLayerGroup": CacheGroup {
          "caching": true,
          "d": [Function],
          "keyMaker": KeyTrie {
            "makeData": [Function],
            "weakness": true,
          },
        },
        "storageTrie": KeyTrie {
          "makeData": [Function],
          "weakness": true,
        },
        "toReference": [Function],
      },
      "getFragmentDoc": [Function],
      "makeVar": [Function],
      "maybeBroadcastWatch": [Function],
      "optimisticData": Root {
        "canRead": [Function],
        "data": Object {},
        "getFieldValue": [Function],
        "group": CacheGroup {
          "caching": true,
          "d": [Function],
          "keyMaker": KeyTrie {
            "makeData": [Function],
            "weakness": true,
          },
        },
        "policies": Policies {
          "cache": [Circular],
          "config": Object {
            "cache": [Circular],
            "dataIdFromObject": [Function],
            "possibleTypes": Object {
              "AudioNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "Card": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "ContentChildNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "ContentItem": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "ContentNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "ContentParentNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "Feature": Array [
                "ActionListFeature",
                "HeroListFeature",
                "VerticalCardListFeature",
                "HorizontalCardListFeature",
                "TextFeature",
                "ScriptureFeature",
                "WebviewFeature",
                "PrayerListFeature",
              ],
              "FeaturesNode": Array [
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "LikableNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "LiveNode": Array [
                "WeekendContentItem",
              ],
              "Media": Array [
                "ImageMedia",
                "VideoMedia",
                "AudioMedia",
              ],
              "MediaSource": Array [
                "ImageMediaSource",
                "VideoMediaSource",
                "AudioMediaSource",
              ],
              "Node": Array [
                "ContentChannel",
                "Person",
                "Device",
                "Campus",
                "Event",
                "Group",
                "Scripture",
                "Pass",
                "PrayerRequest",
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
                "Url",
                "ActionListFeature",
                "HeroListFeature",
                "VerticalCardListFeature",
                "HorizontalCardListFeature",
                "TextFeature",
                "ScriptureFeature",
                "WebviewFeature",
                "PrayerListFeature",
              ],
              "ProgressNode": Array [
                "ContentSeriesContentItem",
              ],
              "ScriptureNode": Array [
                "DevotionalContentItem",
                "MediaContentItem",
              ],
              "Sharable": Array [
                "SharableContentItem",
                "SharableFeature",
              ],
              "ShareableNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "ThemedNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "VideoNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
            },
            "typePolicies": Object {},
          },
          "fuzzySubtypes": Map {},
          "rootIdsByTypename": Object {
            "Mutation": "ROOT_MUTATION",
            "Query": "ROOT_QUERY",
            "Subscription": "ROOT_SUBSCRIPTION",
          },
          "rootTypenamesById": Object {
            "ROOT_MUTATION": "Mutation",
            "ROOT_QUERY": "Query",
            "ROOT_SUBSCRIPTION": "Subscription",
          },
          "supertypeMap": Map {
            "Node" => Set {},
            "ContentChannel" => Set {
              "Node",
            },
            "Person" => Set {
              "Node",
            },
            "Device" => Set {
              "Node",
            },
            "Campus" => Set {
              "Node",
            },
            "Event" => Set {
              "Node",
            },
            "Group" => Set {
              "Node",
            },
            "Scripture" => Set {
              "Node",
            },
            "Pass" => Set {
              "Node",
            },
            "PrayerRequest" => Set {
              "Node",
            },
            "UniversalContentItem" => Set {
              "Node",
              "ContentItem",
              "ContentNode",
              "Card",
              "VideoNode",
              "AudioNode",
              "ContentParentNode",
              "ContentChildNode",
              "ThemedNode",
              "LikableNode",
              "ShareableNode",
            },
            "DevotionalContentItem" => Set {
              "Node",
              "ContentItem",
              "ContentNode",
              "Card",
              "VideoNode",
              "AudioNode",
              "ContentParentNode",
              "ContentChildNode",
              "ThemedNode",
              "ScriptureNode",
              "LikableNode",
              "ShareableNode",
            },
            "MediaContentItem" => Set {
              "Node",
              "ContentItem",
              "ContentNode",
              "Card",
              "VideoNode",
              "AudioNode",
              "ContentParentNode",
              "ContentChildNode",
              "ThemedNode",
              "ScriptureNode",
              "LikableNode",
              "ShareableNode",
            },
            "ContentSeriesContentItem" => Set {
              "Node",
              "ContentItem",
              "ContentNode",
              "Card",
              "VideoNode",
              "AudioNode",
              "FeaturesNode",
              "ContentParentNode",
              "ContentChildNode",
              "ThemedNode",
              "ProgressNode",
              "LikableNode",
              "ShareableNode",
            },
            "WeekendContentItem" => Set {
              "Node",
              "ContentItem",
              "ContentNode",
              "Card",
              "VideoNode",
              "AudioNode",
              "FeaturesNode",
              "ContentParentNode",
              "ContentChildNode",
              "ThemedNode",
              "LikableNode",
              "ShareableNode",
              "LiveNode",
            },
            "Url" => Set {
              "Node",
            },
            "ActionListFeature" => Set {
              "Node",
              "Feature",
            },
            "HeroListFeature" => Set {
              "Node",
              "Feature",
            },
            "VerticalCardListFeature" => Set {
              "Node",
              "Feature",
            },
            "HorizontalCardListFeature" => Set {
              "Node",
              "Feature",
            },
            "TextFeature" => Set {
              "Node",
              "Feature",
            },
            "ScriptureFeature" => Set {
              "Node",
              "Feature",
            },
            "WebviewFeature" => Set {
              "Node",
              "Feature",
            },
            "PrayerListFeature" => Set {
              "Node",
              "Feature",
            },
            "ContentItem" => Set {},
            "Media" => Set {},
            "ImageMedia" => Set {
              "Media",
            },
            "VideoMedia" => Set {
              "Media",
            },
            "AudioMedia" => Set {
              "Media",
            },
            "MediaSource" => Set {},
            "ImageMediaSource" => Set {
              "MediaSource",
            },
            "VideoMediaSource" => Set {
              "MediaSource",
            },
            "AudioMediaSource" => Set {
              "MediaSource",
            },
            "Sharable" => Set {},
            "SharableContentItem" => Set {
              "Sharable",
            },
            "SharableFeature" => Set {
              "Sharable",
            },
            "Feature" => Set {},
            "ContentNode" => Set {},
            "Card" => Set {},
            "VideoNode" => Set {},
            "AudioNode" => Set {},
            "FeaturesNode" => Set {},
            "ContentParentNode" => Set {},
            "ContentChildNode" => Set {},
            "ThemedNode" => Set {},
            "ProgressNode" => Set {},
            "ScriptureNode" => Set {},
            "LikableNode" => Set {},
            "ShareableNode" => Set {},
            "LiveNode" => Set {},
          },
          "typePolicies": Object {},
          "usingPossibleTypes": true,
        },
        "refs": Object {},
        "rootIds": Object {},
        "sharedLayerGroup": CacheGroup {
          "caching": true,
          "d": [Function],
          "keyMaker": KeyTrie {
            "makeData": [Function],
            "weakness": true,
          },
        },
        "storageTrie": KeyTrie {
          "makeData": [Function],
          "weakness": true,
        },
        "toReference": [Function],
      },
      "policies": Policies {
        "cache": [Circular],
        "config": Object {
          "cache": [Circular],
          "dataIdFromObject": [Function],
          "possibleTypes": Object {
            "AudioNode": Array [
              "UniversalContentItem",
              "DevotionalContentItem",
              "MediaContentItem",
              "ContentSeriesContentItem",
              "WeekendContentItem",
            ],
            "Card": Array [
              "UniversalContentItem",
              "DevotionalContentItem",
              "MediaContentItem",
              "ContentSeriesContentItem",
              "WeekendContentItem",
            ],
            "ContentChildNode": Array [
              "UniversalContentItem",
              "DevotionalContentItem",
              "MediaContentItem",
              "ContentSeriesContentItem",
              "WeekendContentItem",
            ],
            "ContentItem": Array [
              "UniversalContentItem",
              "DevotionalContentItem",
              "MediaContentItem",
              "ContentSeriesContentItem",
              "WeekendContentItem",
            ],
            "ContentNode": Array [
              "UniversalContentItem",
              "DevotionalContentItem",
              "MediaContentItem",
              "ContentSeriesContentItem",
              "WeekendContentItem",
            ],
            "ContentParentNode": Array [
              "UniversalContentItem",
              "DevotionalContentItem",
              "MediaContentItem",
              "ContentSeriesContentItem",
              "WeekendContentItem",
            ],
            "Feature": Array [
              "ActionListFeature",
              "HeroListFeature",
              "VerticalCardListFeature",
              "HorizontalCardListFeature",
              "TextFeature",
              "ScriptureFeature",
              "WebviewFeature",
              "PrayerListFeature",
            ],
            "FeaturesNode": Array [
              "ContentSeriesContentItem",
              "WeekendContentItem",
            ],
            "LikableNode": Array [
              "UniversalContentItem",
              "DevotionalContentItem",
              "MediaContentItem",
              "ContentSeriesContentItem",
              "WeekendContentItem",
            ],
            "LiveNode": Array [
              "WeekendContentItem",
            ],
            "Media": Array [
              "ImageMedia",
              "VideoMedia",
              "AudioMedia",
            ],
            "MediaSource": Array [
              "ImageMediaSource",
              "VideoMediaSource",
              "AudioMediaSource",
            ],
            "Node": Array [
              "ContentChannel",
              "Person",
              "Device",
              "Campus",
              "Event",
              "Group",
              "Scripture",
              "Pass",
              "PrayerRequest",
              "UniversalContentItem",
              "DevotionalContentItem",
              "MediaContentItem",
              "ContentSeriesContentItem",
              "WeekendContentItem",
              "Url",
              "ActionListFeature",
              "HeroListFeature",
              "VerticalCardListFeature",
              "HorizontalCardListFeature",
              "TextFeature",
              "ScriptureFeature",
              "WebviewFeature",
              "PrayerListFeature",
            ],
            "ProgressNode": Array [
              "ContentSeriesContentItem",
            ],
            "ScriptureNode": Array [
              "DevotionalContentItem",
              "MediaContentItem",
            ],
            "Sharable": Array [
              "SharableContentItem",
              "SharableFeature",
            ],
            "ShareableNode": Array [
              "UniversalContentItem",
              "DevotionalContentItem",
              "MediaContentItem",
              "ContentSeriesContentItem",
              "WeekendContentItem",
            ],
            "ThemedNode": Array [
              "UniversalContentItem",
              "DevotionalContentItem",
              "MediaContentItem",
              "ContentSeriesContentItem",
              "WeekendContentItem",
            ],
            "VideoNode": Array [
              "UniversalContentItem",
              "DevotionalContentItem",
              "MediaContentItem",
              "ContentSeriesContentItem",
              "WeekendContentItem",
            ],
          },
          "typePolicies": Object {},
        },
        "fuzzySubtypes": Map {},
        "rootIdsByTypename": Object {
          "Mutation": "ROOT_MUTATION",
          "Query": "ROOT_QUERY",
          "Subscription": "ROOT_SUBSCRIPTION",
        },
        "rootTypenamesById": Object {
          "ROOT_MUTATION": "Mutation",
          "ROOT_QUERY": "Query",
          "ROOT_SUBSCRIPTION": "Subscription",
        },
        "supertypeMap": Map {
          "Node" => Set {},
          "ContentChannel" => Set {
            "Node",
          },
          "Person" => Set {
            "Node",
          },
          "Device" => Set {
            "Node",
          },
          "Campus" => Set {
            "Node",
          },
          "Event" => Set {
            "Node",
          },
          "Group" => Set {
            "Node",
          },
          "Scripture" => Set {
            "Node",
          },
          "Pass" => Set {
            "Node",
          },
          "PrayerRequest" => Set {
            "Node",
          },
          "UniversalContentItem" => Set {
            "Node",
            "ContentItem",
            "ContentNode",
            "Card",
            "VideoNode",
            "AudioNode",
            "ContentParentNode",
            "ContentChildNode",
            "ThemedNode",
            "LikableNode",
            "ShareableNode",
          },
          "DevotionalContentItem" => Set {
            "Node",
            "ContentItem",
            "ContentNode",
            "Card",
            "VideoNode",
            "AudioNode",
            "ContentParentNode",
            "ContentChildNode",
            "ThemedNode",
            "ScriptureNode",
            "LikableNode",
            "ShareableNode",
          },
          "MediaContentItem" => Set {
            "Node",
            "ContentItem",
            "ContentNode",
            "Card",
            "VideoNode",
            "AudioNode",
            "ContentParentNode",
            "ContentChildNode",
            "ThemedNode",
            "ScriptureNode",
            "LikableNode",
            "ShareableNode",
          },
          "ContentSeriesContentItem" => Set {
            "Node",
            "ContentItem",
            "ContentNode",
            "Card",
            "VideoNode",
            "AudioNode",
            "FeaturesNode",
            "ContentParentNode",
            "ContentChildNode",
            "ThemedNode",
            "ProgressNode",
            "LikableNode",
            "ShareableNode",
          },
          "WeekendContentItem" => Set {
            "Node",
            "ContentItem",
            "ContentNode",
            "Card",
            "VideoNode",
            "AudioNode",
            "FeaturesNode",
            "ContentParentNode",
            "ContentChildNode",
            "ThemedNode",
            "LikableNode",
            "ShareableNode",
            "LiveNode",
          },
          "Url" => Set {
            "Node",
          },
          "ActionListFeature" => Set {
            "Node",
            "Feature",
          },
          "HeroListFeature" => Set {
            "Node",
            "Feature",
          },
          "VerticalCardListFeature" => Set {
            "Node",
            "Feature",
          },
          "HorizontalCardListFeature" => Set {
            "Node",
            "Feature",
          },
          "TextFeature" => Set {
            "Node",
            "Feature",
          },
          "ScriptureFeature" => Set {
            "Node",
            "Feature",
          },
          "WebviewFeature" => Set {
            "Node",
            "Feature",
          },
          "PrayerListFeature" => Set {
            "Node",
            "Feature",
          },
          "ContentItem" => Set {},
          "Media" => Set {},
          "ImageMedia" => Set {
            "Media",
          },
          "VideoMedia" => Set {
            "Media",
          },
          "AudioMedia" => Set {
            "Media",
          },
          "MediaSource" => Set {},
          "ImageMediaSource" => Set {
            "MediaSource",
          },
          "VideoMediaSource" => Set {
            "MediaSource",
          },
          "AudioMediaSource" => Set {
            "MediaSource",
          },
          "Sharable" => Set {},
          "SharableContentItem" => Set {
            "Sharable",
          },
          "SharableFeature" => Set {
            "Sharable",
          },
          "Feature" => Set {},
          "ContentNode" => Set {},
          "Card" => Set {},
          "VideoNode" => Set {},
          "AudioNode" => Set {},
          "FeaturesNode" => Set {},
          "ContentParentNode" => Set {},
          "ContentChildNode" => Set {},
          "ThemedNode" => Set {},
          "ProgressNode" => Set {},
          "ScriptureNode" => Set {},
          "LikableNode" => Set {},
          "ShareableNode" => Set {},
          "LiveNode" => Set {},
        },
        "typePolicies": Object {},
        "usingPossibleTypes": true,
      },
      "storeReader": StoreReader {
        "config": Object {
          "addTypename": true,
          "cache": [Circular],
        },
        "executeSelectionSet": [Function],
        "executeSubSelectedArray": [Function],
        "knownResults": WeakMap {},
      },
      "storeWriter": StoreWriter {
        "cache": [Circular],
        "reader": StoreReader {
          "config": Object {
            "addTypename": true,
            "cache": [Circular],
          },
          "executeSelectionSet": [Function],
          "executeSubSelectedArray": [Function],
          "knownResults": WeakMap {},
        },
      },
      "txCount": 0,
      "typenameDocumentCache": Map {},
      "watchDep": [Function],
      "watches": Set {},
    }
  }
  defaultOptions={
    Object {
      "query": Object {
        "fetchPolicy": "no-cache",
      },
      "watchQuery": Object {
        "fetchPolicy": "no-cache",
      },
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={32}
    bbWidth={32}
    height={32}
    isLiked={false}
    itemId="abc"
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        undefined,
        null,
        Object {
          "flex": 0,
          "height": 32,
          "width": 32,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
    width={32}
  >
    <RNSVGGroup
      fill={
        Array [
          0,
          4278190080,
        ]
      }
      fillOpacity={1}
      fillRule={1}
      font={Object {}}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      opacity={1}
      originX={0}
      originY={0}
      propList={Array []}
      rotation={0}
      scaleX={1}
      scaleY={1}
      skewX={0}
      skewY={0}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth={1}
      vectorEffect={0}
      x={0}
      y={0}
    >
      <RNSVGPath
        d="M13.13 20.2h-2.26l1.4-1.4.03-.02.03-.03c6.37-5.6 8.06-7.67 8.06-10.27 0-2.2-1.7-3.9-3.9-3.9-1.23 0-2.48.6-3.28 1.54L12 7.57l-1.23-1.45C9.97 5.18 8.72 4.6 7.5 4.6c-2.2 0-3.9 1.67-3.9 3.88 0 2.6 1.7 4.66 8.07 10.27l.03.03.04.03 1.4 1.4zM10.8 4.03l-.03.03h.1c.4.3.8.64 1.13 1.03.33-.4.72-.75 1.14-1.05h.1c-.02 0-.03-.02-.04-.03.97-.66 2.13-1.03 3.3-1.03C19.6 3 22 5.4 22 8.47c0 3.8-3.4 6.88-8.6 11.46l-1.4 1.4-1.4-1.4C5.4 15.36 2 12.27 2 8.48 2 5.38 4.4 3 7.5 3c1.17 0 2.33.37 3.3 1.03z"
        fill={
          Array [
            0,
            4279743874,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        vectorEffect={0}
        x={0}
        y={0}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`the LikeButton component should render a UnLike 1`] = `
<View
  cache={
    InMemoryCache {
      "addTypename": true,
      "config": Object {
        "addTypename": true,
        "dataIdFromObject": [Function],
        "possibleTypes": Object {
          "AudioNode": Array [
            "UniversalContentItem",
            "DevotionalContentItem",
            "MediaContentItem",
            "ContentSeriesContentItem",
            "WeekendContentItem",
          ],
          "Card": Array [
            "UniversalContentItem",
            "DevotionalContentItem",
            "MediaContentItem",
            "ContentSeriesContentItem",
            "WeekendContentItem",
          ],
          "ContentChildNode": Array [
            "UniversalContentItem",
            "DevotionalContentItem",
            "MediaContentItem",
            "ContentSeriesContentItem",
            "WeekendContentItem",
          ],
          "ContentItem": Array [
            "UniversalContentItem",
            "DevotionalContentItem",
            "MediaContentItem",
            "ContentSeriesContentItem",
            "WeekendContentItem",
          ],
          "ContentNode": Array [
            "UniversalContentItem",
            "DevotionalContentItem",
            "MediaContentItem",
            "ContentSeriesContentItem",
            "WeekendContentItem",
          ],
          "ContentParentNode": Array [
            "UniversalContentItem",
            "DevotionalContentItem",
            "MediaContentItem",
            "ContentSeriesContentItem",
            "WeekendContentItem",
          ],
          "Feature": Array [
            "ActionListFeature",
            "HeroListFeature",
            "VerticalCardListFeature",
            "HorizontalCardListFeature",
            "TextFeature",
            "ScriptureFeature",
            "WebviewFeature",
            "PrayerListFeature",
          ],
          "FeaturesNode": Array [
            "ContentSeriesContentItem",
            "WeekendContentItem",
          ],
          "LikableNode": Array [
            "UniversalContentItem",
            "DevotionalContentItem",
            "MediaContentItem",
            "ContentSeriesContentItem",
            "WeekendContentItem",
          ],
          "LiveNode": Array [
            "WeekendContentItem",
          ],
          "Media": Array [
            "ImageMedia",
            "VideoMedia",
            "AudioMedia",
          ],
          "MediaSource": Array [
            "ImageMediaSource",
            "VideoMediaSource",
            "AudioMediaSource",
          ],
          "Node": Array [
            "ContentChannel",
            "Person",
            "Device",
            "Campus",
            "Event",
            "Group",
            "Scripture",
            "Pass",
            "PrayerRequest",
            "UniversalContentItem",
            "DevotionalContentItem",
            "MediaContentItem",
            "ContentSeriesContentItem",
            "WeekendContentItem",
            "Url",
            "ActionListFeature",
            "HeroListFeature",
            "VerticalCardListFeature",
            "HorizontalCardListFeature",
            "TextFeature",
            "ScriptureFeature",
            "WebviewFeature",
            "PrayerListFeature",
          ],
          "ProgressNode": Array [
            "ContentSeriesContentItem",
          ],
          "ScriptureNode": Array [
            "DevotionalContentItem",
            "MediaContentItem",
          ],
          "Sharable": Array [
            "SharableContentItem",
            "SharableFeature",
          ],
          "ShareableNode": Array [
            "UniversalContentItem",
            "DevotionalContentItem",
            "MediaContentItem",
            "ContentSeriesContentItem",
            "WeekendContentItem",
          ],
          "ThemedNode": Array [
            "UniversalContentItem",
            "DevotionalContentItem",
            "MediaContentItem",
            "ContentSeriesContentItem",
            "WeekendContentItem",
          ],
          "VideoNode": Array [
            "UniversalContentItem",
            "DevotionalContentItem",
            "MediaContentItem",
            "ContentSeriesContentItem",
            "WeekendContentItem",
          ],
        },
        "resultCaching": true,
        "typePolicies": Object {},
      },
      "data": Root {
        "canRead": [Function],
        "data": Object {},
        "getFieldValue": [Function],
        "group": CacheGroup {
          "caching": true,
          "d": [Function],
          "keyMaker": KeyTrie {
            "makeData": [Function],
            "weakness": true,
          },
        },
        "policies": Policies {
          "cache": [Circular],
          "config": Object {
            "cache": [Circular],
            "dataIdFromObject": [Function],
            "possibleTypes": Object {
              "AudioNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "Card": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "ContentChildNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "ContentItem": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "ContentNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "ContentParentNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "Feature": Array [
                "ActionListFeature",
                "HeroListFeature",
                "VerticalCardListFeature",
                "HorizontalCardListFeature",
                "TextFeature",
                "ScriptureFeature",
                "WebviewFeature",
                "PrayerListFeature",
              ],
              "FeaturesNode": Array [
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "LikableNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "LiveNode": Array [
                "WeekendContentItem",
              ],
              "Media": Array [
                "ImageMedia",
                "VideoMedia",
                "AudioMedia",
              ],
              "MediaSource": Array [
                "ImageMediaSource",
                "VideoMediaSource",
                "AudioMediaSource",
              ],
              "Node": Array [
                "ContentChannel",
                "Person",
                "Device",
                "Campus",
                "Event",
                "Group",
                "Scripture",
                "Pass",
                "PrayerRequest",
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
                "Url",
                "ActionListFeature",
                "HeroListFeature",
                "VerticalCardListFeature",
                "HorizontalCardListFeature",
                "TextFeature",
                "ScriptureFeature",
                "WebviewFeature",
                "PrayerListFeature",
              ],
              "ProgressNode": Array [
                "ContentSeriesContentItem",
              ],
              "ScriptureNode": Array [
                "DevotionalContentItem",
                "MediaContentItem",
              ],
              "Sharable": Array [
                "SharableContentItem",
                "SharableFeature",
              ],
              "ShareableNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "ThemedNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "VideoNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
            },
            "typePolicies": Object {},
          },
          "fuzzySubtypes": Map {},
          "rootIdsByTypename": Object {
            "Mutation": "ROOT_MUTATION",
            "Query": "ROOT_QUERY",
            "Subscription": "ROOT_SUBSCRIPTION",
          },
          "rootTypenamesById": Object {
            "ROOT_MUTATION": "Mutation",
            "ROOT_QUERY": "Query",
            "ROOT_SUBSCRIPTION": "Subscription",
          },
          "supertypeMap": Map {
            "Node" => Set {},
            "ContentChannel" => Set {
              "Node",
            },
            "Person" => Set {
              "Node",
            },
            "Device" => Set {
              "Node",
            },
            "Campus" => Set {
              "Node",
            },
            "Event" => Set {
              "Node",
            },
            "Group" => Set {
              "Node",
            },
            "Scripture" => Set {
              "Node",
            },
            "Pass" => Set {
              "Node",
            },
            "PrayerRequest" => Set {
              "Node",
            },
            "UniversalContentItem" => Set {
              "Node",
              "ContentItem",
              "ContentNode",
              "Card",
              "VideoNode",
              "AudioNode",
              "ContentParentNode",
              "ContentChildNode",
              "ThemedNode",
              "LikableNode",
              "ShareableNode",
            },
            "DevotionalContentItem" => Set {
              "Node",
              "ContentItem",
              "ContentNode",
              "Card",
              "VideoNode",
              "AudioNode",
              "ContentParentNode",
              "ContentChildNode",
              "ThemedNode",
              "ScriptureNode",
              "LikableNode",
              "ShareableNode",
            },
            "MediaContentItem" => Set {
              "Node",
              "ContentItem",
              "ContentNode",
              "Card",
              "VideoNode",
              "AudioNode",
              "ContentParentNode",
              "ContentChildNode",
              "ThemedNode",
              "ScriptureNode",
              "LikableNode",
              "ShareableNode",
            },
            "ContentSeriesContentItem" => Set {
              "Node",
              "ContentItem",
              "ContentNode",
              "Card",
              "VideoNode",
              "AudioNode",
              "FeaturesNode",
              "ContentParentNode",
              "ContentChildNode",
              "ThemedNode",
              "ProgressNode",
              "LikableNode",
              "ShareableNode",
            },
            "WeekendContentItem" => Set {
              "Node",
              "ContentItem",
              "ContentNode",
              "Card",
              "VideoNode",
              "AudioNode",
              "FeaturesNode",
              "ContentParentNode",
              "ContentChildNode",
              "ThemedNode",
              "LikableNode",
              "ShareableNode",
              "LiveNode",
            },
            "Url" => Set {
              "Node",
            },
            "ActionListFeature" => Set {
              "Node",
              "Feature",
            },
            "HeroListFeature" => Set {
              "Node",
              "Feature",
            },
            "VerticalCardListFeature" => Set {
              "Node",
              "Feature",
            },
            "HorizontalCardListFeature" => Set {
              "Node",
              "Feature",
            },
            "TextFeature" => Set {
              "Node",
              "Feature",
            },
            "ScriptureFeature" => Set {
              "Node",
              "Feature",
            },
            "WebviewFeature" => Set {
              "Node",
              "Feature",
            },
            "PrayerListFeature" => Set {
              "Node",
              "Feature",
            },
            "ContentItem" => Set {},
            "Media" => Set {},
            "ImageMedia" => Set {
              "Media",
            },
            "VideoMedia" => Set {
              "Media",
            },
            "AudioMedia" => Set {
              "Media",
            },
            "MediaSource" => Set {},
            "ImageMediaSource" => Set {
              "MediaSource",
            },
            "VideoMediaSource" => Set {
              "MediaSource",
            },
            "AudioMediaSource" => Set {
              "MediaSource",
            },
            "Sharable" => Set {},
            "SharableContentItem" => Set {
              "Sharable",
            },
            "SharableFeature" => Set {
              "Sharable",
            },
            "Feature" => Set {},
            "ContentNode" => Set {},
            "Card" => Set {},
            "VideoNode" => Set {},
            "AudioNode" => Set {},
            "FeaturesNode" => Set {},
            "ContentParentNode" => Set {},
            "ContentChildNode" => Set {},
            "ThemedNode" => Set {},
            "ProgressNode" => Set {},
            "ScriptureNode" => Set {},
            "LikableNode" => Set {},
            "ShareableNode" => Set {},
            "LiveNode" => Set {},
          },
          "typePolicies": Object {},
          "usingPossibleTypes": true,
        },
        "refs": Object {},
        "rootIds": Object {},
        "sharedLayerGroup": CacheGroup {
          "caching": true,
          "d": [Function],
          "keyMaker": KeyTrie {
            "makeData": [Function],
            "weakness": true,
          },
        },
        "storageTrie": KeyTrie {
          "makeData": [Function],
          "weakness": true,
        },
        "toReference": [Function],
      },
      "getFragmentDoc": [Function],
      "makeVar": [Function],
      "maybeBroadcastWatch": [Function],
      "optimisticData": Root {
        "canRead": [Function],
        "data": Object {},
        "getFieldValue": [Function],
        "group": CacheGroup {
          "caching": true,
          "d": [Function],
          "keyMaker": KeyTrie {
            "makeData": [Function],
            "weakness": true,
          },
        },
        "policies": Policies {
          "cache": [Circular],
          "config": Object {
            "cache": [Circular],
            "dataIdFromObject": [Function],
            "possibleTypes": Object {
              "AudioNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "Card": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "ContentChildNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "ContentItem": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "ContentNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "ContentParentNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "Feature": Array [
                "ActionListFeature",
                "HeroListFeature",
                "VerticalCardListFeature",
                "HorizontalCardListFeature",
                "TextFeature",
                "ScriptureFeature",
                "WebviewFeature",
                "PrayerListFeature",
              ],
              "FeaturesNode": Array [
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "LikableNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "LiveNode": Array [
                "WeekendContentItem",
              ],
              "Media": Array [
                "ImageMedia",
                "VideoMedia",
                "AudioMedia",
              ],
              "MediaSource": Array [
                "ImageMediaSource",
                "VideoMediaSource",
                "AudioMediaSource",
              ],
              "Node": Array [
                "ContentChannel",
                "Person",
                "Device",
                "Campus",
                "Event",
                "Group",
                "Scripture",
                "Pass",
                "PrayerRequest",
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
                "Url",
                "ActionListFeature",
                "HeroListFeature",
                "VerticalCardListFeature",
                "HorizontalCardListFeature",
                "TextFeature",
                "ScriptureFeature",
                "WebviewFeature",
                "PrayerListFeature",
              ],
              "ProgressNode": Array [
                "ContentSeriesContentItem",
              ],
              "ScriptureNode": Array [
                "DevotionalContentItem",
                "MediaContentItem",
              ],
              "Sharable": Array [
                "SharableContentItem",
                "SharableFeature",
              ],
              "ShareableNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "ThemedNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
              "VideoNode": Array [
                "UniversalContentItem",
                "DevotionalContentItem",
                "MediaContentItem",
                "ContentSeriesContentItem",
                "WeekendContentItem",
              ],
            },
            "typePolicies": Object {},
          },
          "fuzzySubtypes": Map {},
          "rootIdsByTypename": Object {
            "Mutation": "ROOT_MUTATION",
            "Query": "ROOT_QUERY",
            "Subscription": "ROOT_SUBSCRIPTION",
          },
          "rootTypenamesById": Object {
            "ROOT_MUTATION": "Mutation",
            "ROOT_QUERY": "Query",
            "ROOT_SUBSCRIPTION": "Subscription",
          },
          "supertypeMap": Map {
            "Node" => Set {},
            "ContentChannel" => Set {
              "Node",
            },
            "Person" => Set {
              "Node",
            },
            "Device" => Set {
              "Node",
            },
            "Campus" => Set {
              "Node",
            },
            "Event" => Set {
              "Node",
            },
            "Group" => Set {
              "Node",
            },
            "Scripture" => Set {
              "Node",
            },
            "Pass" => Set {
              "Node",
            },
            "PrayerRequest" => Set {
              "Node",
            },
            "UniversalContentItem" => Set {
              "Node",
              "ContentItem",
              "ContentNode",
              "Card",
              "VideoNode",
              "AudioNode",
              "ContentParentNode",
              "ContentChildNode",
              "ThemedNode",
              "LikableNode",
              "ShareableNode",
            },
            "DevotionalContentItem" => Set {
              "Node",
              "ContentItem",
              "ContentNode",
              "Card",
              "VideoNode",
              "AudioNode",
              "ContentParentNode",
              "ContentChildNode",
              "ThemedNode",
              "ScriptureNode",
              "LikableNode",
              "ShareableNode",
            },
            "MediaContentItem" => Set {
              "Node",
              "ContentItem",
              "ContentNode",
              "Card",
              "VideoNode",
              "AudioNode",
              "ContentParentNode",
              "ContentChildNode",
              "ThemedNode",
              "ScriptureNode",
              "LikableNode",
              "ShareableNode",
            },
            "ContentSeriesContentItem" => Set {
              "Node",
              "ContentItem",
              "ContentNode",
              "Card",
              "VideoNode",
              "AudioNode",
              "FeaturesNode",
              "ContentParentNode",
              "ContentChildNode",
              "ThemedNode",
              "ProgressNode",
              "LikableNode",
              "ShareableNode",
            },
            "WeekendContentItem" => Set {
              "Node",
              "ContentItem",
              "ContentNode",
              "Card",
              "VideoNode",
              "AudioNode",
              "FeaturesNode",
              "ContentParentNode",
              "ContentChildNode",
              "ThemedNode",
              "LikableNode",
              "ShareableNode",
              "LiveNode",
            },
            "Url" => Set {
              "Node",
            },
            "ActionListFeature" => Set {
              "Node",
              "Feature",
            },
            "HeroListFeature" => Set {
              "Node",
              "Feature",
            },
            "VerticalCardListFeature" => Set {
              "Node",
              "Feature",
            },
            "HorizontalCardListFeature" => Set {
              "Node",
              "Feature",
            },
            "TextFeature" => Set {
              "Node",
              "Feature",
            },
            "ScriptureFeature" => Set {
              "Node",
              "Feature",
            },
            "WebviewFeature" => Set {
              "Node",
              "Feature",
            },
            "PrayerListFeature" => Set {
              "Node",
              "Feature",
            },
            "ContentItem" => Set {},
            "Media" => Set {},
            "ImageMedia" => Set {
              "Media",
            },
            "VideoMedia" => Set {
              "Media",
            },
            "AudioMedia" => Set {
              "Media",
            },
            "MediaSource" => Set {},
            "ImageMediaSource" => Set {
              "MediaSource",
            },
            "VideoMediaSource" => Set {
              "MediaSource",
            },
            "AudioMediaSource" => Set {
              "MediaSource",
            },
            "Sharable" => Set {},
            "SharableContentItem" => Set {
              "Sharable",
            },
            "SharableFeature" => Set {
              "Sharable",
            },
            "Feature" => Set {},
            "ContentNode" => Set {},
            "Card" => Set {},
            "VideoNode" => Set {},
            "AudioNode" => Set {},
            "FeaturesNode" => Set {},
            "ContentParentNode" => Set {},
            "ContentChildNode" => Set {},
            "ThemedNode" => Set {},
            "ProgressNode" => Set {},
            "ScriptureNode" => Set {},
            "LikableNode" => Set {},
            "ShareableNode" => Set {},
            "LiveNode" => Set {},
          },
          "typePolicies": Object {},
          "usingPossibleTypes": true,
        },
        "refs": Object {},
        "rootIds": Object {},
        "sharedLayerGroup": CacheGroup {
          "caching": true,
          "d": [Function],
          "keyMaker": KeyTrie {
            "makeData": [Function],
            "weakness": true,
          },
        },
        "storageTrie": KeyTrie {
          "makeData": [Function],
          "weakness": true,
        },
        "toReference": [Function],
      },
      "policies": Policies {
        "cache": [Circular],
        "config": Object {
          "cache": [Circular],
          "dataIdFromObject": [Function],
          "possibleTypes": Object {
            "AudioNode": Array [
              "UniversalContentItem",
              "DevotionalContentItem",
              "MediaContentItem",
              "ContentSeriesContentItem",
              "WeekendContentItem",
            ],
            "Card": Array [
              "UniversalContentItem",
              "DevotionalContentItem",
              "MediaContentItem",
              "ContentSeriesContentItem",
              "WeekendContentItem",
            ],
            "ContentChildNode": Array [
              "UniversalContentItem",
              "DevotionalContentItem",
              "MediaContentItem",
              "ContentSeriesContentItem",
              "WeekendContentItem",
            ],
            "ContentItem": Array [
              "UniversalContentItem",
              "DevotionalContentItem",
              "MediaContentItem",
              "ContentSeriesContentItem",
              "WeekendContentItem",
            ],
            "ContentNode": Array [
              "UniversalContentItem",
              "DevotionalContentItem",
              "MediaContentItem",
              "ContentSeriesContentItem",
              "WeekendContentItem",
            ],
            "ContentParentNode": Array [
              "UniversalContentItem",
              "DevotionalContentItem",
              "MediaContentItem",
              "ContentSeriesContentItem",
              "WeekendContentItem",
            ],
            "Feature": Array [
              "ActionListFeature",
              "HeroListFeature",
              "VerticalCardListFeature",
              "HorizontalCardListFeature",
              "TextFeature",
              "ScriptureFeature",
              "WebviewFeature",
              "PrayerListFeature",
            ],
            "FeaturesNode": Array [
              "ContentSeriesContentItem",
              "WeekendContentItem",
            ],
            "LikableNode": Array [
              "UniversalContentItem",
              "DevotionalContentItem",
              "MediaContentItem",
              "ContentSeriesContentItem",
              "WeekendContentItem",
            ],
            "LiveNode": Array [
              "WeekendContentItem",
            ],
            "Media": Array [
              "ImageMedia",
              "VideoMedia",
              "AudioMedia",
            ],
            "MediaSource": Array [
              "ImageMediaSource",
              "VideoMediaSource",
              "AudioMediaSource",
            ],
            "Node": Array [
              "ContentChannel",
              "Person",
              "Device",
              "Campus",
              "Event",
              "Group",
              "Scripture",
              "Pass",
              "PrayerRequest",
              "UniversalContentItem",
              "DevotionalContentItem",
              "MediaContentItem",
              "ContentSeriesContentItem",
              "WeekendContentItem",
              "Url",
              "ActionListFeature",
              "HeroListFeature",
              "VerticalCardListFeature",
              "HorizontalCardListFeature",
              "TextFeature",
              "ScriptureFeature",
              "WebviewFeature",
              "PrayerListFeature",
            ],
            "ProgressNode": Array [
              "ContentSeriesContentItem",
            ],
            "ScriptureNode": Array [
              "DevotionalContentItem",
              "MediaContentItem",
            ],
            "Sharable": Array [
              "SharableContentItem",
              "SharableFeature",
            ],
            "ShareableNode": Array [
              "UniversalContentItem",
              "DevotionalContentItem",
              "MediaContentItem",
              "ContentSeriesContentItem",
              "WeekendContentItem",
            ],
            "ThemedNode": Array [
              "UniversalContentItem",
              "DevotionalContentItem",
              "MediaContentItem",
              "ContentSeriesContentItem",
              "WeekendContentItem",
            ],
            "VideoNode": Array [
              "UniversalContentItem",
              "DevotionalContentItem",
              "MediaContentItem",
              "ContentSeriesContentItem",
              "WeekendContentItem",
            ],
          },
          "typePolicies": Object {},
        },
        "fuzzySubtypes": Map {},
        "rootIdsByTypename": Object {
          "Mutation": "ROOT_MUTATION",
          "Query": "ROOT_QUERY",
          "Subscription": "ROOT_SUBSCRIPTION",
        },
        "rootTypenamesById": Object {
          "ROOT_MUTATION": "Mutation",
          "ROOT_QUERY": "Query",
          "ROOT_SUBSCRIPTION": "Subscription",
        },
        "supertypeMap": Map {
          "Node" => Set {},
          "ContentChannel" => Set {
            "Node",
          },
          "Person" => Set {
            "Node",
          },
          "Device" => Set {
            "Node",
          },
          "Campus" => Set {
            "Node",
          },
          "Event" => Set {
            "Node",
          },
          "Group" => Set {
            "Node",
          },
          "Scripture" => Set {
            "Node",
          },
          "Pass" => Set {
            "Node",
          },
          "PrayerRequest" => Set {
            "Node",
          },
          "UniversalContentItem" => Set {
            "Node",
            "ContentItem",
            "ContentNode",
            "Card",
            "VideoNode",
            "AudioNode",
            "ContentParentNode",
            "ContentChildNode",
            "ThemedNode",
            "LikableNode",
            "ShareableNode",
          },
          "DevotionalContentItem" => Set {
            "Node",
            "ContentItem",
            "ContentNode",
            "Card",
            "VideoNode",
            "AudioNode",
            "ContentParentNode",
            "ContentChildNode",
            "ThemedNode",
            "ScriptureNode",
            "LikableNode",
            "ShareableNode",
          },
          "MediaContentItem" => Set {
            "Node",
            "ContentItem",
            "ContentNode",
            "Card",
            "VideoNode",
            "AudioNode",
            "ContentParentNode",
            "ContentChildNode",
            "ThemedNode",
            "ScriptureNode",
            "LikableNode",
            "ShareableNode",
          },
          "ContentSeriesContentItem" => Set {
            "Node",
            "ContentItem",
            "ContentNode",
            "Card",
            "VideoNode",
            "AudioNode",
            "FeaturesNode",
            "ContentParentNode",
            "ContentChildNode",
            "ThemedNode",
            "ProgressNode",
            "LikableNode",
            "ShareableNode",
          },
          "WeekendContentItem" => Set {
            "Node",
            "ContentItem",
            "ContentNode",
            "Card",
            "VideoNode",
            "AudioNode",
            "FeaturesNode",
            "ContentParentNode",
            "ContentChildNode",
            "ThemedNode",
            "LikableNode",
            "ShareableNode",
            "LiveNode",
          },
          "Url" => Set {
            "Node",
          },
          "ActionListFeature" => Set {
            "Node",
            "Feature",
          },
          "HeroListFeature" => Set {
            "Node",
            "Feature",
          },
          "VerticalCardListFeature" => Set {
            "Node",
            "Feature",
          },
          "HorizontalCardListFeature" => Set {
            "Node",
            "Feature",
          },
          "TextFeature" => Set {
            "Node",
            "Feature",
          },
          "ScriptureFeature" => Set {
            "Node",
            "Feature",
          },
          "WebviewFeature" => Set {
            "Node",
            "Feature",
          },
          "PrayerListFeature" => Set {
            "Node",
            "Feature",
          },
          "ContentItem" => Set {},
          "Media" => Set {},
          "ImageMedia" => Set {
            "Media",
          },
          "VideoMedia" => Set {
            "Media",
          },
          "AudioMedia" => Set {
            "Media",
          },
          "MediaSource" => Set {},
          "ImageMediaSource" => Set {
            "MediaSource",
          },
          "VideoMediaSource" => Set {
            "MediaSource",
          },
          "AudioMediaSource" => Set {
            "MediaSource",
          },
          "Sharable" => Set {},
          "SharableContentItem" => Set {
            "Sharable",
          },
          "SharableFeature" => Set {
            "Sharable",
          },
          "Feature" => Set {},
          "ContentNode" => Set {},
          "Card" => Set {},
          "VideoNode" => Set {},
          "AudioNode" => Set {},
          "FeaturesNode" => Set {},
          "ContentParentNode" => Set {},
          "ContentChildNode" => Set {},
          "ThemedNode" => Set {},
          "ProgressNode" => Set {},
          "ScriptureNode" => Set {},
          "LikableNode" => Set {},
          "ShareableNode" => Set {},
          "LiveNode" => Set {},
        },
        "typePolicies": Object {},
        "usingPossibleTypes": true,
      },
      "storeReader": StoreReader {
        "config": Object {
          "addTypename": true,
          "cache": [Circular],
        },
        "executeSelectionSet": [Function],
        "executeSubSelectedArray": [Function],
        "knownResults": WeakMap {},
      },
      "storeWriter": StoreWriter {
        "cache": [Circular],
        "reader": StoreReader {
          "config": Object {
            "addTypename": true,
            "cache": [Circular],
          },
          "executeSelectionSet": [Function],
          "executeSubSelectedArray": [Function],
          "knownResults": WeakMap {},
        },
      },
      "txCount": 0,
      "typenameDocumentCache": Map {},
      "watchDep": [Function],
      "watches": Set {},
    }
  }
  defaultOptions={
    Object {
      "query": Object {
        "fetchPolicy": "no-cache",
      },
      "watchQuery": Object {
        "fetchPolicy": "no-cache",
      },
    }
  }
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={32}
    bbWidth={32}
    height={32}
    isLiked={true}
    itemId="abc"
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        undefined,
        null,
        Object {
          "flex": 0,
          "height": 32,
          "width": 32,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
    width={32}
  >
    <RNSVGGroup
      fill={
        Array [
          0,
          4278190080,
        ]
      }
      fillOpacity={1}
      fillRule={1}
      font={Object {}}
      matrix={
        Array [
          1,
          0,
          0,
          1,
          0,
          0,
        ]
      }
      opacity={1}
      originX={0}
      originY={0}
      propList={Array []}
      rotation={0}
      scaleX={1}
      scaleY={1}
      skewX={0}
      skewY={0}
      stroke={null}
      strokeDasharray={null}
      strokeDashoffset={null}
      strokeLinecap={0}
      strokeLinejoin={0}
      strokeMiterlimit={4}
      strokeOpacity={1}
      strokeWidth={1}
      vectorEffect={0}
      x={0}
      y={0}
    >
      <RNSVGPath
        d="M10.8 4.03l-.03.03h.1c.4.3.8.64 1.13 1.03.33-.4.72-.75 1.14-1.05h.1c-.02 0-.03-.02-.04-.03.97-.66 2.13-1.03 3.3-1.03C19.6 3 22 5.4 22 8.47c0 3.8-3.4 6.88-8.6 11.46l-1.4 1.4-1.4-1.4C5.4 15.36 2 12.27 2 8.48 2 5.38 4.4 3 7.5 3c1.17 0 2.33.37 3.3 1.03z"
        fill={
          Array [
            0,
            4279743874,
          ]
        }
        fillOpacity={1}
        fillRule={1}
        matrix={
          Array [
            1,
            0,
            0,
            1,
            0,
            0,
          ]
        }
        opacity={1}
        originX={0}
        originY={0}
        propList={
          Array [
            "fill",
          ]
        }
        rotation={0}
        scaleX={1}
        scaleY={1}
        skewX={0}
        skewY={0}
        stroke={null}
        strokeDasharray={null}
        strokeDashoffset={null}
        strokeLinecap={0}
        strokeLinejoin={0}
        strokeMiterlimit={4}
        strokeOpacity={1}
        strokeWidth={1}
        vectorEffect={0}
        x={0}
        y={0}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
